Addressed review issue, see #3397
Build a Mixed Fraction: Numbers: Level 2: Prevent duplicate challenges
# 1.01.02 (67235) Aug 22, 2012
Build a Mixed Fraction: Numbers: Added level 2
# 1.01.01 (67225) Aug 22, 2012
Build a Mixed Fraction: Numbers: Added level 1
# 1.01.00 (67103) Aug 17, 2012
> fraction-matcher: Added a refresh button to load new challenges for the same level
> fraction-matcher: Improved level selection screen and other UI improvements
# 1.00.43 (67099) Aug 17, 2012
Build a Fraction: Fixed green button colors with NP provided artwork
# 1.00.42 (67096) Aug 17, 2012
Fraction Matcher: When a game is over, if the "level selection screen button" is pressed, record the stars and clear the level as if the user had pressed "new game"
Build a Fraction: Numbers: Adjusted level 6 so that it has at least 3 stacks, because when there are just 2 stacks, one often has 7 cards and is too tall (and overlaps adjacent stacks and goes out of the toolbox bounds)
Build a Fraction: Numbers: Increase spacing between stacks so that tall stacks don't overlap adjacent stacks
Build a Fraction: If you get past level 5 by pressing "next" then the level selection screen will take you to the 2nd page, showing the higher levels
Build a Fraction: Numbers: Fixed: pressing undo on one target clears all the stars
Removed @Override in interface implementations
# 1.00.41 (67076) Aug 16, 2012
Added level selection screen button icon images from NP
Equality Lab: Fixed location for the bucket for red rectangles (was 20px left of others)
Build a Fraction: Shapes: Determines whether the user is trying to put the container in the toolbox, if so do not send back to play area if overlapped with collection box, see #3397
Fraction Matcher: Level 4: allow unreduced fractions in the numeric representation
Intro: Prevent glitches in the circle shapes
# 1.00.40 (67060) Aug 15, 2012
Build a Fraction: Numbers: Fixed: hitting "reset" when the sim starts up causes the fraction outline to move